--- a/mypy.ini
+++ b/mypy.ini
@@ -15,3 +15,6 @@ ignore_missing_imports = True
 
 [mypy-pyperplan.*]
 ignore_missing_imports = True
+
+[mypy-popper.*]
+ignore_missing_imports = True
